django-jazzmin ui setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ redis = "^4.5.4"
 pyjwt = "^2.7.0"
 django-cors-headers = "^4.0.0"
 watchdog = "^3.0.0"
+django-jazzmin = "^2.6.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.7.0"
