--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platfo
 coverage==6.5.0 ; python_version >= "3.10" and python_version < "4.0"
 cryptography==41.0.1 ; python_version >= "3.10" and python_version < "4.0"
 django-cors-headers==4.0.0 ; python_version >= "3.10" and python_version < "4.0"
+django-jazzmin==2.6.0 ; python_version >= "3.10" and python_version < "4.0"
 django==4.2.2 ; python_version >= "3.10" and python_version < "4.0"
 djangorestframework==3.14.0 ; python_version >= "3.10" and python_version < "4.0"
 drf-spectacular==0.25.1 ; python_version >= "3.10" and python_version < "4.0"
