--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,9 @@ django-cors-headers = "^4.0.0"
 watchdog = "^3.0.0"
 django-jazzmin = "^2.6.0"
 
-[tool.poetry.dev-dependencies]
-autopep8 = "^1.7.0"
-flake8 = "^5.0.4"
-
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
