--- a/requirements.txt
+++ b/requirements.txt
@@ -33,17 +33,20 @@ google-cloud-storage==2.9.0 ; python_version >= "3.10" and python_version < "4.0
 google-crc32c==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
 google-resumable-media==2.5.0 ; python_version >= "3.10" and python_version < "4.0"
 googleapis-common-protos==1.59.0 ; python_version >= "3.10" and python_version < "4.0"
-grpcio-status==1.54.2 ; python_version < "4.0" and platform_python_implementation != "PyPy" and python_version >= "3.10"
-grpcio==1.54.2 ; python_version < "4.0" and platform_python_implementation != "PyPy" and python_version >= "3.10"
+grpcio-status==1.54.2 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
+grpcio==1.54.2 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
 httplib2==0.22.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
 inflection==0.5.1 ; python_version >= "3.10" and python_version < "4.0"
+joblib==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 jsonschema==4.17.3 ; python_version >= "3.10" and python_version < "4.0"
 kombu==5.3.0 ; python_version >= "3.10" and python_version < "4.0"
 msgpack==1.0.5 ; python_version >= "3.10" and python_version < "4.0"
+nltk==3.8.1 ; python_version >= "3.10" and python_version < "4.0"
+numpy==1.25.1 ; python_version >= "3.10" and python_version < "4.0"
 prompt-toolkit==3.0.38 ; python_version >= "3.10" and python_version < "4.0"
 proto-plus==1.22.2 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
-protobuf==4.23.2 ; python_version < "4.0" and python_version >= "3.10"
+protobuf==4.23.2 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2-binary==2.9.6 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1-modules==0.3.0 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -52,17 +55,25 @@ pyjwt==2.7.0 ; python_version >= "3.10" and python_version < "4.0"
 pyjwt[crypto]==2.7.0 ; python_version >= "3.10" and python_version < "4.0"
 pyparsing==3.0.9 ; python_version >= "3.10" and python_version < "4.0"
 pyrsistent==0.19.3 ; python_version >= "3.10" and python_version < "4.0"
+python-crfsuite==0.9.9 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==0.21.1 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2023.3 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
 redis==4.5.5 ; python_version >= "3.10" and python_version < "4.0"
+regex==2023.6.3 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
+scikit-learn==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+scipy==1.9.3 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.10" and python_version < "4.0"
+threadpoolctl==3.2.0 ; python_version >= "3.10" and python_version < "4.0"
+tqdm==4.65.0 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.6.3 ; python_version >= "3.10" and python_version < "3.11"
 tzdata==2023.3 ; python_version >= "3.10" and python_version < "4.0"
+underthesea-core==1.0.4 ; python_version >= "3.10" and python_version < "4.0"
+underthesea==6.5.0 ; python_version >= "3.10" and python_version < "4.0"
 uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==1.26.16 ; python_version >= "3.10" and python_version < "4.0"
 vine==5.0.0 ; python_version >= "3.10" and python_version < "4.0"
